syntax = "proto3";
package pb;
option go_package="../pb";

message User{
    string id = 1;
    string name = 2;
    string email = 3;
}

message UserResultStream { // para stream server
    string status = 1; 
    User user = 2;
}

message Users{// message para client stream
    repeated User user = 1;
}

service UserService{
    rpc AddUser(User) returns (User);
    rpc AddUserVebose(User) returns (stream UserResultStream);//Stream server
    rpc AddUsers(stream User) returns(Users);//Client Stream
    rpc AddUserStreamBoth(stream User) returns (stream UserResultStream);//bi direcional Stream 
}

